--- a/src/MovieRow.css
+++ b/src/MovieRow.css
@@ -1,5 +1,12 @@
 .movieRow__posters {
     display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
+}
+
+.movieRow__posters::-webkit-scrollbar {
+    display: none;
 }
 
 .movieRow__poster {
