--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,6 +1,9 @@
 .navbar {
     position: fixed;
     top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .nav__logo {
