--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -2,9 +2,17 @@
     position: fixed;
     top: 0;
     width: 100%;
-    padding-top: 20px;
+    padding: 20px;
+    height: 30px;
     display: flex;
     justify-content: space-between;
+
+    transition-timing-function: ease-in;
+    transition: all 0.5s;
+}
+
+.navbar--black {
+    background-color: #111;
 }
 
 .nav__logo {
